--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,66 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="no-js" lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="description" content="Weather app for Deep Consulting PTA" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="author" content="Deep Consulting" />
+    <meta name="copyright" content="MIT" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <title>Sunny</title>
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
+    <meta property="og:title" content="Web App" />
+    <meta property="og:type" content="" />
+    <meta property="og:url" content="" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo512.png" />
+
+    <!--
+      Give name for pinning site to Taskbar on WIndows.
     -->
-    <title>React App</title>
+    <meta name="application-name" content="Sunny" />
+    <!--
+      Give site tooltip for pinning
+    -->
+    <meta name="msapplication-tooltip" content="Sunny" />
+
+    <meta name="msapplication-TileImage" content="%PUBLIC_URL%/logo512.png" />
+    <!-- Make it possible to pin app on mobile -->
+    <meta name="mobile-web-app-capable" content="yes" />
+    <!-- Get Site to look like app on iOS  -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="#000000" />
+    <!--
+      Add Title for when site is pinned to iOS screen
+    -->
+    <meta name="apple-mobile-web-app-title" content="Sunny" />
+    <meta name="theme-color" content="#ffffff" />
+
+    <!--
+      Add icon for when pinned to iOS & any other mobile
+     -->
+    <link rel="icon" sizes="192x192" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="icon" sizes="512x512" href="%PUBLIC_URL%/logo512.png" />
+    <!--
+       Display certain image when site is loaded as app on iOS
+      -->
+    <link
+      rel="apple-touch-startup-image"
+      media="(max-width: 480px) and (-webkit-min-device-pixel-ratio: 2)"
+      href="%PUBLIC_URL%/logo512.png"
+    />
+    <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo512.png" />
+
+    <!--
+      DNS Pre-fetching: pre-fetches the site that is included in the href
+    -->
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
